# Manipulation

./: .setup_assistant  61  =61  CMakeLists.txt  CuroboMotionPlanner.py  CuroboMotionPlanner2.py  README.md  Trajectory_executor.py  curobo_batch.py  curobo_node.py  curobo_ros.py  curobo_sim.py  fetch_camera.py  fetch_manip_torso.urdf  fetch_sim.py  fetch_torso.yml  helper.py  isaac_sim_curobo.py  lib  orbiter_bt  package.xml  pyproject.toml  target_client  temp_CuroboMotionPlanner.py  temp_curobo_ros.py  temp_sim.py
config/: fetch.ros2_control.xacro  fetch.srdf  fetch.urdf.xacro  fetch.yml  fetch_manip.urdf  fetch_mesh.yml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  world_collision_prim.yml
fetch_description/: CMakeLists.txt  package.xml
fetch_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fetch_moveit_config/config/: fetch.ros2_control.xacro  fetch.srdf  fetch.urdf.xacro  fetch_moveit_try.ros2_control.xacro  fetch_moveit_try.srdf  fetch_moveit_try.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
fetch_moveit_config/launch/: demo.launch.py  demo_real.launch.py  demo_sim.launch.py  isaac_moveit.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
fetch_moveit_config/src/: fetch_move_interface.py  moveit_interface_wrapper.cpp  moveit_interface_wrapper_old.cpp
fetch_moveit_config_2/: package.xml  (+2 more)
(+47 files in other folders)
